# screeps-ibex

./: .example-screeps.yaml  .gitignore  .gitmodules  .travis.yml  AGENTS.md  Cargo.toml  README.md  clippy.toml  example-screeps.toml  ibex.code-workspace  package-lock.json  package.json  todo.md
.cargo/: config.toml
.cursor/plans/: ai_state_visualization_overhaul_23b0c3f9.plan.md  squad_renew_and_group-up_ff075239.plan.md  summarization_and_visualization_refactor_v2.plan.md  transfer_system_visualization.plan.md
.cursor/rules/: screeps-ibex-context.mdc
docs/: README.md
docs/design/: 0001-entity-model.md  0002-serialization.md  0003-behavior-modeling.md  0004-cpu-governance-and-load-shedding.md  0005-runtime-and-scheduling-model.md  0007-hauling-logistics.md  (+48 more)
grafana/: dashboard.json
js/: main.js
js_src/: main.js
js_tools/: deploy.js
libs/timing/: Cargo.toml
libs/timing/src/: lib.rs
screeps-combat-agent/: Cargo.toml
screeps-combat-agent/examples/: replay_demo.rs
screeps-combat-agent/src/: lib.rs  opponents.rs  pathing.rs  replay.rs  scenario.rs  squad.rs
screeps-combat-decision/: Cargo.toml
screeps-combat-decision/src/: cohesion.rs  kite.rs  lib.rs
screeps-combat-engine/: AGENTS.md  Cargo.toml  README.md
screeps-combat-engine/src/: body.rs  constants.rs  damage.rs  lib.rs  movement.rs  record.rs  resolve.rs  state.rs
screeps-combat-eval/: Cargo.toml
screeps-combat-eval/examples/: run_register.rs
screeps-combat-eval/src/: bench.rs  lib.rs  metrics.rs  scoring.rs  tournament.rs
screeps-eval/: .gitignore  Cargo.toml  README.md
screeps-eval/.cargo/: config.toml
screeps-eval/config/: local.example.yml  server.yml
screeps-eval/server/: config.yml
screeps-eval/src/: api.rs  capture.rs  config.rs  deploy.rs  docker.rs  lib.rs  main.rs  server.rs  server_config.rs  smoke.rs
screeps-foreman-bench/: .gitignore  Cargo.toml  README.md
screeps-foreman-bench/src/: main.rs
screeps-ibex/: .gitignore  .travis.yml  Cargo.toml  clippy.toml  example-screeps.toml
screeps-ibex-eval/: Cargo.toml  README.md
screeps-ibex-eval/src/: gates.rs  lib.rs  main.rs  scenario.rs  score.rs  smoke.rs
screeps-ibex-metrics/: Cargo.toml
screeps-ibex-metrics/src/: lib.rs
screeps-ibex/grafana/: dashboard.json  generate-dashboard.js  migrated-dashboard.json  new-dashboard.json
screeps-ibex/javascript/: main.js
screeps-ibex/js/: main.js
screeps-ibex/src/: claim_economics.rs  cleanup.rs  combat.rs  constants.rs  cpugovernor.rs  creep.rs  entitymappingsystem.rs  expansion.rs  features.rs  findnearest.rs  game_loop.rs  gameview.rs  globals.rs  identity.rs  intents.rs  lib.rs  logging.rs  machine_tick.rs  main.rs  memory_helper.rs  memorysystem.rs  metrics.rs  panic.rs  pathbudget.rs  remoteobjectid.rs  repairqueue.rs  room_economics.rs  segments.rs  serialize.rs  spawnsystem.rs  stats_history.rs  statssystem.rs  store.rs  structureidentifier.rs  ui.rs  visualization.rs  visualize.rs
screeps-ibex/src/jobs/: actions.rs  attack.rs  build.rs  claim.rs  context.rs  data.rs  declaim.rs  dismantle.rs  harvest.rs  haul.rs  heal.rs  jobsystem.rs  linkmine.rs  mod.rs  ranged.rs  reserve.rs  scout.rs  squad_combat.rs  staticmine.rs  tank.rs  upgrade.rs
screeps-ibex/src/jobs/utility/: build.rs  buildbehavior.rs  controllerbehavior.rs  dismantle.rs  dismantlebehavior.rs  harvestbehavior.rs  haulbehavior.rs  movebehavior.rs  repair.rs  repairbehavior.rs
screeps-ibex/src/military/: bodies.rs  boostqueue.rs  composition.rs  damage.rs  economy.rs  force_sizing.rs  formation.rs  mod.rs  objective_queue.rs  squad.rs  squad_manager.rs  threatmap.rs
screeps-ibex/src/missions/: attack_mission.rs  claim.rs  colony.rs  constants.rs  construction.rs  data.rs  defend.rs  dismantle.rs  haul.rs  labs.rs  localbuild.rs  localsupply.rs  miningoutpost.rs  missionsystem.rs  mod.rs  nuke_defense.rs  powerspawn.rs  raid.rs  remotebuild.rs  remotemine.rs  reserve.rs  safe_mode.rs  salvage.rs  scout.rs  sourcekeeperfarm.rs  squad_assault.rs  squad_defense.rs  squad_harass.rs  terminal.rs  tower.rs  upgrade.rs  utility.rs  wall_repair.rs
screeps-ibex/src/missions/localsupply/: body_helpers.rs  mineral_mining.rs  mod.rs  room_transfer.rs  source_mining.rs  structure_data.rs
screeps-ibex/src/operations/: attack.rs  claim.rs  colony.rs  data.rs  defense.rs  managersystem.rs  miningoutpost.rs  mod.rs  operationsystem.rs  salvage.rs  scout.rs  sourcekeeper.rs  war.rs
screeps-ibex/src/pathing/: costmatrixsystem.rs  gridsearch.rs  mod.rs  movementsystem.rs  pathfinderservice.rs  value.rs
screeps-ibex/src/room/: createroomsystem.rs  data.rs  gather.rs  layout.rs  mod.rs  room_status_cache.rs  roomplansystem.rs  roomplanvisualizesystem.rs  updateroomsystem.rs  visibilitysystem.rs
screeps-ibex/src/transfer/: fairvalue.rs  mod.rs  ordersystem.rs  transfersystem.rs  utility.rs
screeps-pack/: Cargo.toml  PARITY.md  README.md
screeps-pack/src/: bindgen.rs  cargo_build.rs  config.rs  glue.rs  lib.rs  main.rs  opt.rs  project.rs  tools.rs  upload.rs
screeps-pack/templates/: loader.js
screeps-plus-stats/: Cargo.toml
screeps-plus-stats/src/: main.rs
screeps-prospector/: .gitignore  Cargo.toml  README.md
screeps-prospector/.cargo/: config.toml
screeps-prospector/src/: api.rs  cache.rs  config.rs  lib.rs  main.rs  ops.rs  place.rs  score.rs
screeps-rest-api/: Cargo.toml  README.md
screeps-rest-api/src/: client.rs  code.rs  error.rs  lib.rs  quota.rs  socket.rs  types.rs
screeps-server-kit/: .gitignore  Cargo.toml  README.md
screeps-server-kit/config/: local.example.yml  server.yml
screeps-server-kit/src/: api.rs  capture.rs  config.rs  console.rs  deploy.rs  docker.rs  lib.rs  main.rs  server.rs  server_config.rs
src/: cache.rs  componentaccess.rs  constants.rs  creep.rs  entitymappingsystem.rs  features.rs  findnearest.rs  game_loop.rs  globals.rs  location.rs  logging.rs  main.rs  mappingsystem.rs  memorysystem.rs  ownership.rs  remoteobjectid.rs  serialize.rs  spawnsystem.rs  stats.rs  statssystem.rs  store.rs  structureidentifier.rs  timing.rs  ui.rs  visualize.rs
(+127 files in other folders)
