[workspace]
resolver = "2"
members = [
    "screeps-ibex",
    "screeps-cache",
    "screeps-rover",
    "screeps-timing",
    "screeps-timing-annotate",
    "screeps-foreman",
    "screeps-visual",
]
exclude = ["screeps-foreman-bench"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[patch.'https://github.com/Azaril/screeps-cache']
screeps-cache = { path = "screeps-cache" }

[patch.'https://github.com/Azaril/screeps-machine']
screeps-machine = { path = "screeps-machine" }

[patch.'https://github.com/Azaril/screeps-rover']
screeps-rover = { path = "screeps-rover" }

[patch.'https://github.com/Azaril/screeps-timing']
screeps-timing = { path = "screeps-timing" }

[patch.'https://github.com/Azaril/screeps-timing-annotate']
screeps-timing-annotate = { path = "screeps-timing-annotate" }

[patch.'https://github.com/Azaril/screeps-foreman']
screeps-foreman = { path = "screeps-foreman" }

[patch.'https://github.com/Azaril/screeps-visual']
screeps-visual = { path = "screeps-visual" }

[patch.crates-io]
screeps-game-api = { path = "../screeps-game-api" }