[workspace]
resolver = "2"
members = [
    "screeps-ibex",
    "screeps-ibex-metrics",
    "screeps-cache",
    "screeps-common",
    "screeps-rover",
    "screeps-timing",
    "screeps-timing-annotate",
    "screeps-foreman",
    "screeps-visual",
    "screeps-combat-engine",
    "screeps-combat-decision",
    # The sim glue. Now that it depends only on workspace members (decision + engine + rover),
    # not the bot, it is a member too — so it inherits the workspace [patch] table + Cargo.lock
    # (no replication) and builds host+wasm like the other pure crates (operator note 2026-06-17).
    "screeps-combat-agent",
]
exclude = [
    "screeps-foreman-bench",
    "screeps-server-kit",
    "screeps-ibex-eval",
    "screeps-prospector",
    "screeps-rest-api",
    "screeps-pack",
]

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[patch.'https://github.com/Azaril/screeps-cache']
screeps-cache = { path = "screeps-cache" }

[patch.'https://github.com/Azaril/screeps-machine']
screeps-machine = { path = "screeps-machine" }

[patch.'https://github.com/Azaril/screeps-rover']
screeps-rover = { path = "screeps-rover" }

[patch.'https://github.com/Azaril/screeps-timing']
screeps-timing = { path = "screeps-timing" }

[patch.'https://github.com/Azaril/screeps-timing-annotate']
screeps-timing-annotate = { path = "screeps-timing-annotate" }

[patch.'https://github.com/Azaril/screeps-foreman']
screeps-foreman = { path = "screeps-foreman" }

[patch.'https://github.com/Azaril/screeps-visual']
screeps-visual = { path = "screeps-visual" }

[patch.'https://github.com/Azaril/screeps-common']
screeps-common = { path = "screeps-common" }

[patch.crates-io]
screeps-game-api = { path = "../screeps-game-api" }