[workspace]
resolver = "2"
members = [
    "screeps-ibex",
    "screeps-ibex-metrics",
    "screeps-cache",
    "screeps-common",
    "screeps-rover",
    "screeps-timing",
    "screeps-timing-annotate",
    "screeps-foreman",
    "screeps-visual",
    "screeps-combat-engine",
    "screeps-combat-decision",
    # The sim glue. Now that it depends only on workspace members (decision + engine + rover),
    # not the bot, it is a member too — so it inherits the workspace [patch] table + Cargo.lock
    # (no replication) and builds host+wasm like the other pure crates (operator note 2026-06-17).
    "screeps-combat-agent",
    # The combat policy layer (H5): the EXP-* experiment register over the sim. Member like agent —
    # deps only on the combat members + game-api.
    "screeps-combat-eval",
    # Host-side tool crates (tokio/bollard/reqwest — host-only, NOT wasm-buildable):
    # members so the workspace is the single place to pull/use this code, and the root
    # [patch] table below redirects their inter-crate git deps to the local working tree
    # (edit one, rebuild a dependent, no push needed). They cannot build for wasm32, so
    # the wasm aliases in .cargo/config.toml --exclude these four.
    "screeps-rest-api",
    "screeps-pack",
    "screeps-prospector",
    "screeps-server-kit",
    # Host-side bench + eval-harness crates (foreman-bench: rayon/image; ibex-eval:
    # tokio-multithread + bollard via server-kit). Members too, for uniformity — the
    # wasm aliases (.cargo/config.toml) --exclude every host-only crate.
    "screeps-foreman-bench",
    "screeps-ibex-eval",
]
# No `exclude`: every crate directory in this repo is now a workspace member.

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[patch.'https://github.com/Azaril/screeps-cache']
screeps-cache = { path = "screeps-cache" }

[patch.'https://github.com/Azaril/screeps-machine']
screeps-machine = { path = "screeps-machine" }

[patch.'https://github.com/Azaril/screeps-rover']
screeps-rover = { path = "screeps-rover" }

[patch.'https://github.com/Azaril/screeps-timing']
screeps-timing = { path = "screeps-timing" }

[patch.'https://github.com/Azaril/screeps-timing-annotate']
screeps-timing-annotate = { path = "screeps-timing-annotate" }

[patch.'https://github.com/Azaril/screeps-foreman']
screeps-foreman = { path = "screeps-foreman" }

[patch.'https://github.com/Azaril/screeps-visual']
screeps-visual = { path = "screeps-visual" }

[patch.'https://github.com/Azaril/screeps-common']
screeps-common = { path = "screeps-common" }

[patch.'https://github.com/Azaril/screeps-combat-engine']
screeps-combat-engine = { path = "screeps-combat-engine" }

[patch.'https://github.com/Azaril/screeps-combat-decision']
screeps-combat-decision = { path = "screeps-combat-decision" }

[patch.'https://github.com/Azaril/screeps-combat-agent']
screeps-combat-agent = { path = "screeps-combat-agent" }

# Host-side tool crates: redirect their inter-crate git deps to the local member
# paths so cross-crate edits are picked up without a push (server-kit is not a
# dependency of any member, so it needs no patch entry).
[patch.'https://github.com/Azaril/screeps-rest-api']
screeps-rest-api = { path = "screeps-rest-api" }

[patch.'https://github.com/Azaril/screeps-pack']
screeps-pack = { path = "screeps-pack" }

[patch.'https://github.com/Azaril/screeps-prospector']
screeps-prospector = { path = "screeps-prospector" }

[patch.crates-io]
screeps-game-api = { path = "../screeps-game-api" }