[package]
name = "screeps-combat-agent"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "The tactical seam's sim side (ADR 0006 Part B / P2.H2): builds a screeps-combat-decision CombatView from a screeps-combat-engine CombatWorld and runs the bot's REAL decision code (IbexAgent, wrapping decide_combat) over it — so self-play uses one implementation, no tactics fork."

# Workspace-EXCLUDED, host-only sim glue. It depends ONLY on the two tiny value-type member crates
# screeps-combat-decision (the tactics) + screeps-combat-engine (the mechanism) — NOT the whole bot
# (P2.H2 follow-up): the bot's decision code was extracted into screeps-combat-decision, so this
# crate no longer drags the full bot graph (specs / screeps-machine / rover / foreman / visual) or
# its git-dep [patch] table through a host compile. The only redirect still needed is the crates-io
# screeps-game-api one (both decision + engine depend on it; [patch] tables apply from the build
# root, and this crate is excluded so it owns its own).

[dependencies]
screeps-game-api = "0.23"
screeps-combat-engine = { path = "../screeps-combat-engine" }
screeps-combat-decision = { path = "../screeps-combat-decision" }

# screeps-game-api is cloned as a sibling of the repo root (C:\code\screeps-game-api), so from this
# subdirectory it is two levels up (the root patch's "../screeps-game-api" is relative to the root).
[patch.crates-io]
screeps-game-api = { path = "../../screeps-game-api" }
