[package]
name = "screeps-combat-agent"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "The tactical seam's sim side (ADR 0006 Part B / P2.H2): builds a screeps-combat-decision CombatView from a screeps-combat-engine CombatWorld and runs the bot's REAL decision code (IbexAgent, wrapping decide_combat) over it, and plans movement through rover's headless pathfinder — so self-play uses one implementation, no tactics fork."

# A workspace MEMBER. It depends only on other members (decision + engine + rover, all pure
# value-type logic over screeps-game-api), NOT the bot, so it inherits the workspace [patch] table
# and Cargo.lock with no replication, and builds host+wasm like the other pure crates. (It was
# EXCLUDED while it still dragged the whole bot; the decision-crate extraction removed that —
# operator note 2026-06-17.)

[dependencies]
screeps-game-api = "0.23"
screeps-combat-engine = { path = "../screeps-combat-engine" }
screeps-combat-decision = { path = "../screeps-combat-decision" }
# Rover WITHOUT the `screeps` feature = its pure headless core (LocalPathfinder + the cost-matrix
# builder), so the sim plans paths through the same system as live, with no JS (P2.M-bridge).
screeps-rover = { path = "../screeps-rover" }
