[package]
name = "screeps-combat-engine"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Deterministic, JS-free port of the Screeps combat tick — the combat micro-sim's mechanism layer (ADR 0006 Part B / ADR 0008a)."

# A workspace MEMBER (not excluded): pure logic over screeps-game-api value types
# (Part/Position/RoomName), the same host+wasm-buildable profile as screeps-rover /
# screeps-foreman — no host-only deps (tokio/bollard), so the exclusion rationale that
# applies to screeps-server-kit / screeps-ibex-eval does not apply here. Inherits the
# workspace [patch] for screeps-game-api. (ADR 0006 said "EXCLUDED"; corrected to MEMBER
# — see phase-2 status log.)

[dependencies]
screeps-game-api = "0.23"
