[package]
name = "screeps-combat-eval"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "The combat policy layer (ADR 0006 Part B / P2.H5): the ADR 0008a EXP-* experiment register as a runnable, metric-producing suite over the combat sim — the tactics-tuning loop. Change a tunable in screeps-combat-decision, run the register, watch the metrics move; gates flag regressions. (Sim-vs-server parity + golden vectors are the follow-on increment.)"

# A workspace MEMBER, like screeps-combat-agent: depends only on the other pure combat members
# (engine + decision + agent) + screeps-game-api, so it inherits the workspace [patch] table and
# Cargo.lock with no replication and builds host-only.

[dependencies]
screeps-game-api = "0.23"
screeps-combat-engine = { path = "../screeps-combat-engine" }
screeps-combat-decision = { path = "../screeps-combat-decision" }
screeps-combat-agent = { path = "../screeps-combat-agent" }
