[package]
name = "screeps-eval"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Private-server execution, deployment, and evaluation harness for screeps-ibex (library + CLI)."
# Lifecycle: starts in-repo (workspace-excluded); extracts to a submodule
# with its own remote once stable (Phase 0 plan, decision D-1). Keep this
# crate self-contained: no workspace-crate deps, no repo-relative path
# assumptions beyond the documented .screeps.yaml discovery rule.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "signal"] }
bollard = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
