[package]
name = "screeps-ibex-eval"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Evaluation POLICY for screeps-ibex: the smoke gates (ibex's pinned log markers), run/baseline scenario orchestration, and the smoke/run CLI — built on the generic screeps-server-kit mechanism."
# POLICY crate (Phase 0 plan, P0.A14): this is where "correct/healthy
# for ibex" is defined — the panic/deser log-marker strings pinned from
# the bot crate, the stats segment, the smoke loop. All mechanism
# (Docker stack, bootstrap, deploy, capture) comes from screeps-server-kit.
# A workspace MEMBER like its dependency screeps-server-kit (single place to
# pull/use; the root [patch] table gives clean local patching). Host-only, so
# the wasm aliases in .cargo/config.toml --exclude it.

[dependencies]
# The generic private-server toolkit (P0.A14 mechanism/policy split).
# Path dep to the sibling member crate.
screeps-server-kit = { path = "../screeps-server-kit" }
# The seg-57 metrics schema (P1.A2 reader side — same crate the bot
# writes with, so the contract cannot drift).
screeps-ibex-metrics = { path = "../screeps-ibex-metrics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# No [patch] table: as a workspace member this crate inherits the root
# Cargo.toml [patch] table, which redirects the transitive git deps (from
# screeps-server-kit -> prospector -> foreman) to the local working tree.
