[package]
name = "screeps-pack"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "npm-free build + deploy tool for Rust Screeps bots: cargo build (wasm32), lockfile-matched wasm-bindgen, CJS loader glue, optional wasm-opt, and code upload to any .screeps.yaml server entry (library + CLI)."
# THE deployment tool (Phase 0 plan, P0.A13; design:
# docs/design/rust-native-deploy-investigation.md — verdict GO).
# Lifecycle: starts in-repo (workspace-excluded); extracts to a submodule
# with its own remote once stable (decision D-1; community-share
# candidate for the rustyscreeps org). Keep it self-contained: the only
# sibling dep is screeps-rest-api (the shared client, same lifecycle),
# no other repo-relative path assumptions — the build target and the
# credentials file are explicit inputs.

[dependencies]
# The shared Screeps REST client (P0.A12): auth (token + user/pass) and
# the pinned POST /api/user/code shape. Path dep while in-repo; becomes
# a git dep at the D-1 extraction.
screeps-rest-api = { path = "../screeps-rest-api" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
# Tool acquisition (prebuilt wasm-bindgen-cli / binaryen from GitHub
# releases), rustls to match the rest of the toolchain.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
tar = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
# Cargo.lock / Cargo.toml metadata parsing (never hand-roll encodings).
toml = "0.8"
sha2 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
