[package]
name = "screeps-plus-stats"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.1"