[package]
name = "screeps-prospector"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Spawn-site selection tool for screeps-ibex: scan/fetch/score rooms, recommend and place spawns (library + CLI)."
# Lifecycle: starts in-repo (workspace-excluded); extracts to a submodule
# with its own remote once stable (Phase 0 plan, Workstream P — same
# lifecycle as screeps-eval, decision D-1). Keep this crate self-contained
# beyond two documented seams: creds at ../.screeps.yaml (runtime only)
# and the ../screeps-foreman path dep (becomes a git dep at extraction).

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
# Host-side room planning for P0.P3 scoring. `default-features = false`
# omits the `screeps` feature's live game-API calls, so the crate compiles
# and runs on native targets — screeps-foreman-bench is the precedent that
# proves this host build works.
screeps-foreman = { path = "../screeps-foreman", default-features = false }

# screeps-foreman's own dependencies are git URLs; redirect them to the
# local clones exactly like screeps-foreman-bench/Cargo.toml does (this
# crate is workspace-excluded, so the root Cargo.toml [patch] table does
# not apply here). Mirrors the bench's proven patch set: screeps-visual
# and screeps-game-api intentionally stay un-patched (fetched from git /
# crates.io, per the bench's lockfile).
[patch.'https://github.com/Azaril/screeps-cache']
screeps-cache = { path = "../screeps-cache" }

[patch.'https://github.com/Azaril/screeps-common']
screeps-common = { path = "../screeps-common" }
