[package]
name = "screeps-server-kit"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "Local private-server toolkit for Screeps bot development: Docker stack lifecycle, world bootstrap, tick control, deploy orchestration, and console/metrics capture (library + operator CLI)."
# MECHANISM crate (Phase 0 plan, P0.A14): everything here is bot-agnostic —
# bot-specific evaluation POLICY (smoke gates, scenario orchestration)
# lives in consumers such as ../screeps-ibex-eval.
# Lifecycle: starts in-repo (workspace-excluded); extracts to a submodule
# with its own remote once stable (Phase 0 plan, decision D-1). Keep this
# crate self-contained: no workspace-crate deps, no repo-relative path
# assumptions beyond the documented .screeps.yaml discovery rule.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "io-std", "signal"] }
# The shared Screeps REST/websocket client (P0.A12): auth, pinned
# endpoint set, console socket. Path dep while in-repo; becomes a git
# dep at extraction (decision D-1).
screeps-rest-api = { path = "../screeps-rest-api" }
bollard = "0.19"
# Build-context tar for `server build-image` (P0.A9(d)); bytes feeds
# bollard::body_full.
tar = "0.4"
bytes = "1"
# reqwest stays for the server-CLI client (port 21026) — that is the
# launcher's own HTTP protocol, not the Screeps game API.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
